# azure-iot-edge

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt  run.py
src/: main.py
