[tool.poetry]
name = "azure-iot-edge"
version = "0.1.0"
description = ""
authors = ["Bhaktij Koli <bhaktijkoli121@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
azure-iot-device = "^2.12.0"
fastapi = "^0.84.0"
uvicorn = "^0.18.3"
loguru = "^0.6.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
